--- a/Resources.resx
+++ b/Resources.resx
@@ -128,6 +128,9 @@
   <data name="main_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>web\main.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="modalDialog_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>web\modaldialog.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="postConnectionString_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>web\postconnectionstring.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
