Trying to add list of all server objects

--- a/MsSqlDependancyBrowser/Resources.resx
+++ b/MsSqlDependancyBrowser/Resources.resx
@@ -134,6 +134,9 @@
   <data name="postConnectionString_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>web\postconnectionstring.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="queryAllObjects_sql" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>sqlscripts\queryallobjects.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="queryObjectDependancies_sql" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>sqlscripts\queryobjectdependancies.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
