Migration to AngularJS

--- a/MsSqlDepandancyBrowser/Resources.resx
+++ b/MsSqlDepandancyBrowser/Resources.resx
@@ -134,6 +134,9 @@
   <data name="objectNameParam" xml:space="preserve">
     <value>sp</value>
   </data>
+  <data name="objectText_html" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>web\objecttext.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="postConnectionString_js" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>web\postconnectionstring.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
