--- a/MsSqlDepandancyBrowser/Resources.resx
+++ b/MsSqlDepandancyBrowser/Resources.resx
@@ -132,7 +132,7 @@
     <value>web\main.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="objectNameParam" xml:space="preserve">
-    <value>sp</value>
+    <value>obj</value>
   </data>
   <data name="objectText_html" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>web\objecttext.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
@@ -154,6 +154,9 @@
   </data>
   <data name="queryTableXml_sql" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>sqlscripts\querytablexml.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="schemaNameParam" xml:space="preserve">
+    <value>sch</value>
   </data>
   <data name="table2html_xslt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>table2html.xslt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
