--- a/MsSqlDependencyBrowser/Resources.resx
+++ b/MsSqlDependencyBrowser/Resources.resx
@@ -125,7 +125,7 @@
     <value>web\index.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="keywords" xml:space="preserve">
-    <value>select from where order group by insert update delete merge into having exec with declare create function procedure return returns begin end as if while for set try catch drop table view union all case then when cross apply outer inner left join and or on else raiserror throw tran commit rollback pivot unpivot for cursor open is in not null over partition using values varchar integer int bigint data datetime bit numeric execute fetch nvarchar revert nocount exists uniqueidentifier output index raiserror</value>
+    <value>select from where order group by insert update delete merge into having exec with declare create function procedure return returns begin end as if while for set try catch drop table view union all case then when cross apply outer inner left join and or on else raiserror throw tran commit rollback pivot unpivot for cursor open is in not null over partition using values varchar tinyint integer int bigint sysname date datetime datetime2 bit numeric char decimal varbinary execute fetch nvarchar revert nocount exists uniqueidentifier output index raiserror print on off nolock open close deallocate goto</value>
     <comment>SQL keywords</comment>
   </data>
   <data name="main_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -151,6 +151,9 @@
   </data>
   <data name="queryObjectInfo_sql" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>sqlscripts\queryobjectinfo.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="queryObjectTypes_sql" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>sqlscripts\queryobjecttypes.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="queryTableXml_sql" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>sqlscripts\querytablexml.sql;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
