--- a/MsSqlDependencyBrowser/Resources.resx
+++ b/MsSqlDependencyBrowser/Resources.resx
@@ -125,11 +125,12 @@
     <value>web\index.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="keywords1" xml:space="preserve">
-    <value>select from where order group by insert update delete merge into having exec with declare create function procedure return returns begin end as if while for set try catch drop table view union all case then when cross apply outer inner left join and or on else raiserror throw tran commit rollback pivot unpivot for cursor open is in not null over partition using values varchar tinyint integer int bigint sysname date datetime datetime2 bit numeric char decimal varbinary execute fetch nvarchar revert nocount exists uniqueidentifier output index raiserror print on off nolock open close deallocate goto</value>
-    <comment>SQL keywords</comment>
+    <value>select from where order group by insert update delete merge into having exec with declare create function procedure return returns begin end as if while for set try catch drop table view union all case then when cross apply outer inner left join and or on else raiserror throw tran commit rollback pivot unpivot for cursor open is in not null over partition using values varchar tinyint integer int bigint sysname date datetime datetime2 bit numeric char decimal varbinary execute fetch nvarchar revert nocount exists uniqueidentifier output index raiserror print on off nolock open close deallocate goto image ntext top truncate</value>
+    <comment>SQL keywords 1</comment>
   </data>
   <data name="keywords2" xml:space="preserve">
-    <value>sum avg min max count row_number rank isnull coalesce nullif getdate getutcdate day month year left len trim stuff datepart eomonth suser_sname</value>
+    <value>sum avg min max count row_number rank isnull coalesce nullif getdate getutcdate getdate day month year len trim stuff datepart eomonth suser_sname cast convert db_name dateadd datediff</value>
+    <comment>SQL keywords 2</comment>
   </data>
   <data name="main_css" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>web\main.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
